# My-FastMCP-Main-Server

./: .gitignore  ARCHITECTURE_REWORK.md  CLAUDE.md  Checklist.md  Dockerfile  LICENSE  PRD.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: fastmcp-expert-dev.md
config/: docker.json
src/mcp_proxy_server/: __init__.py  __main__.py  cli.py  config.py  credentials.py  fastmcp_proxy.py  proxy.py  server_registry.py  session_lifecycle.py
src/mcp_proxy_server/middleware/: __init__.py  namespace_routing.py  request_transformation.py
src/mcp_proxy_server/proxy/: __init__.py  request_handlers.py  routing.py  server.py
src/mcp_proxy_server/session/: __init__.py  isolation_manager.py
templates/: .env.template  Dockerfile  docker-compose.yml
templates/configs/: claude-desktop.json  cursor.json  docker.json  uv-install.json  uvx-run.json
tests/: test_fastmcp_proxy.py  test_package_structure.py  test_session_lifecycle.py
